--- a/trunk/src/com/floreantpos/jreports/TicketReceiptReport.jrxml
+++ b/trunk/src/com/floreantpos/jreports/TicketReceiptReport.jrxml
@@ -502,7 +502,9 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{changedAmount}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-6" x="33" y="28" width="42" height="13"/>
+				<reportElement key="staticText-6" x="33" y="28" width="42" height="13">
+					<printWhenExpression><![CDATA[$P{taxAmount}!=null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
