--- a/trunk/src/com/floreantpos/report/TicketReceiptReport.jrxml
+++ b/trunk/src/com/floreantpos/report/TicketReceiptReport.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="166"/>
+	<property name="ireport.y" value="310"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -657,6 +657,11 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{footerMessage}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="157" width="148" height="10"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[.]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
