--- a/src/com/floreantpos/report/TicketReceiptReport.jrxml
+++ b/src/com/floreantpos/report/TicketReceiptReport.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="291"/>
+	<property name="ireport.y" value="300"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -678,6 +678,15 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{copyType}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="161" width="148" height="13">
+					<printWhenExpression><![CDATA[$P{cardPayment}==true]]></printWhenExpression>
+				</reportElement>
+				<textElement>
+					<font fontName="Monospaced" size="9"/>
+				</textElement>
+				<text><![CDATA[Tips:]]></text>
+			</staticText>
 		</band>
 	</summary>
 </jasperReport>
