--- a/src/com/floreantpos/report/template/sales_sub_report.jrxml
+++ b/src/com/floreantpos/report/template/sales_sub_report.jrxml
@@ -11,19 +11,25 @@
 	<parameter name="grandTotal" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="reportType" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="currencySymbol" class="java.lang.String" isForPrompting="false"/>
-	<parameter name="netTotal" class="java.lang.String"/>
+	<parameter name="netTotal" class="java.lang.Double"/>
 	<parameter name="taxTotal" class="java.lang.String"/>
-	<parameter name="totalQuantity" class="java.lang.String"/>
+	<parameter name="totalQuantity" class="java.lang.Double"/>
 	<parameter name="discountTotal" class="java.lang.String"/>
+	<parameter name="Total" class="java.lang.String"/>
+	<parameter name="grossTotal" class="java.lang.String"/>
 	<field name="Id" class="java.lang.String"/>
 	<field name="Name" class="java.lang.String"/>
 	<field name="Price" class="java.lang.String"/>
-	<field name="QTY" class="java.lang.String"/>
+	<field name="QTY" class="java.lang.Double"/>
 	<field name="Tax" class="java.lang.String"/>
-	<field name="Net Total" class="java.lang.String"/>
 	<field name="Dis" class="java.lang.String"/>
 	<field name="Tax Total" class="java.lang.String"/>
-	<field name="Gross Total" class="java.lang.String"/>
+	<field name="Gross Total" class="java.lang.Double"/>
+	<field name="Total" class="java.lang.String"/>
+	<variable name="itemTotal" class="java.lang.String" incrementType="Column" calculation="Sum">
+		<variableExpression><![CDATA[]]></variableExpression>
+		<initialValueExpression><![CDATA[]]></initialValueExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -90,7 +96,7 @@
 					<text><![CDATA[QTY]]></text>
 				</staticText>
 				<staticText>
-					<reportElement key="staticText-5" mode="Opaque" x="378" y="0" width="36" height="20" backcolor="#CCCCCC"/>
+					<reportElement key="staticText-5" mode="Opaque" x="378" y="0" width="46" height="20" backcolor="#CCCCCC"/>
 					<box>
 						<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -116,7 +122,7 @@
 					<text><![CDATA[ID]]></text>
 				</staticText>
 				<staticText>
-					<reportElement key="staticText-6" mode="Opaque" x="414" y="0" width="62" height="20" backcolor="#CCCCCC"/>
+					<reportElement key="staticText-6" mode="Opaque" x="424" y="0" width="52" height="20" backcolor="#CCCCCC"/>
 					<box>
 						<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -129,7 +135,7 @@
 					<text><![CDATA[Tax Total]]></text>
 				</staticText>
 				<staticText>
-					<reportElement key="staticText-7" mode="Opaque" x="270" y="0" width="70" height="20" backcolor="#CCCCCC"/>
+					<reportElement key="staticText-7" mode="Opaque" x="270" y="0" width="60" height="20" backcolor="#CCCCCC"/>
 					<box>
 						<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -139,7 +145,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 					</textElement>
-					<text><![CDATA[Gross Total]]></text>
+					<text><![CDATA[Total]]></text>
 				</staticText>
 				<staticText>
 					<reportElement key="staticText-5" mode="Opaque" x="476" y="0" width="63" height="20" backcolor="#CCCCCC"/>
@@ -152,10 +158,10 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font size="11" isBold="true" pdfFontName="Helvetica-Bold"/>
 					</textElement>
-					<text><![CDATA[Net Total]]></text>
+					<text><![CDATA[Gross Total]]></text>
 				</staticText>
 				<staticText>
-					<reportElement key="staticText-5" mode="Opaque" x="340" y="0" width="38" height="20" backcolor="#CCCCCC"/>
+					<reportElement key="staticText-5" mode="Opaque" x="330" y="0" width="48" height="20" backcolor="#CCCCCC"/>
 					<box>
 						<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -203,7 +209,7 @@
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{Price}]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="true">
@@ -214,63 +220,63 @@
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{QTY}]]></textFieldExpression>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.Double"><![CDATA[$F{QTY}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤ #,##0.00" isBlankWhenNull="true">
-					<reportElement key="textField-5" mode="Transparent" x="476" y="0" width="63" height="20"/>
+					<reportElement key="textField-5" mode="Transparent" x="270" y="0" width="60" height="20"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{Net Total}]]></textFieldExpression>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{Total}]]></textFieldExpression>
 				</textField>
 				<textField pattern="#,##0.00" isBlankWhenNull="true">
-					<reportElement key="textField-6" mode="Transparent" x="340" y="0" width="38" height="20"/>
+					<reportElement key="textField-6" mode="Transparent" x="330" y="0" width="48" height="20"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{Dis}]]></textFieldExpression>
 				</textField>
 				<textField pattern="#,##0.00" isBlankWhenNull="true">
-					<reportElement key="textField-7" mode="Transparent" x="378" y="0" width="36" height="20"/>
+					<reportElement key="textField-7" mode="Transparent" x="378" y="0" width="46" height="20"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{Tax}]]></textFieldExpression>
 				</textField>
 				<textField pattern="¤ #,##0.00" isBlankWhenNull="true">
-					<reportElement key="textField-8" mode="Transparent" x="414" y="0" width="62" height="20"/>
+					<reportElement key="textField-8" mode="Transparent" x="424" y="0" width="52" height="20"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{Tax Total}]]></textFieldExpression>
 				</textField>
-				<textField pattern="¤ #,##0.00" isBlankWhenNull="true">
-					<reportElement key="textField-9" mode="Transparent" x="270" y="0" width="70" height="20"/>
+				<textField pattern="0.00" isBlankWhenNull="true">
+					<reportElement key="textField-9" mode="Transparent" x="476" y="0" width="63" height="20"/>
 					<box rightPadding="5">
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 						<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{Gross Total}]]></textFieldExpression>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
+					<textFieldExpression class="java.lang.Double"><![CDATA[$F{Gross Total}]]></textFieldExpression>
 				</textField>
 			</elementGroup>
 		</band>
@@ -324,10 +330,10 @@
 					<leftPen lineWidth="0.5" lineStyle="Solid"/>
 					<bottomPen lineWidth="0.5" lineStyle="Solid"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalQuantity}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$P{totalQuantity}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement key="textField-12" mode="Transparent" x="476" y="0" width="63" height="20" backcolor="#808080"/>
@@ -336,24 +342,24 @@
 					<bottomPen lineWidth="0.5" lineStyle="Solid"/>
 					<rightPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{netTotal}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.Double"><![CDATA[$P{grossTotal}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-13" mode="Transparent" x="340" y="0" width="38" height="20" backcolor="#808080"/>
+				<reportElement key="textField-13" mode="Transparent" x="330" y="0" width="48" height="20" backcolor="#808080"/>
 				<box rightPadding="5">
 					<leftPen lineWidth="0.5" lineStyle="Solid"/>
 					<bottomPen lineWidth="0.5" lineStyle="Solid"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{discountTotal}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-14" mode="Transparent" x="378" y="0" width="36" height="20" backcolor="#808080"/>
+				<reportElement key="textField-14" mode="Transparent" x="378" y="0" width="46" height="20" backcolor="#808080"/>
 				<box>
 					<leftPen lineWidth="0.5" lineStyle="Solid"/>
 					<bottomPen lineWidth="0.5" lineStyle="Solid"/>
@@ -363,28 +369,28 @@
 				</textElement>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-15" mode="Transparent" x="414" y="0" width="62" height="20" backcolor="#808080"/>
+				<reportElement key="textField-15" mode="Transparent" x="424" y="0" width="52" height="20" backcolor="#808080"/>
 				<box rightPadding="5">
 					<leftPen lineWidth="0.5" lineStyle="Solid"/>
 					<bottomPen lineWidth="0.5" lineStyle="Solid"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font size="10" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{taxTotal}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement key="textField-16" x="270" y="0" width="70" height="20"/>
+				<reportElement key="textField-16" x="270" y="0" width="60" height="20"/>
 				<box rightPadding="5">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true" pdfFontName="Helvetica-Bold" isPdfEmbedded="false"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{grandTotal}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{Total}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
