-Journal report has been updated with fixing date format -duplicate button with functionality has been added in pizza and menu modifier -pizzamodifierview and selection dialog has been updated
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1635 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/src/com/floreantpos/report/template/journal_report.jrxml
+++ b/src/com/floreantpos/report/template/journal_report.jrxml
@@ -24,7 +24,7 @@
 	<field name="action" class="java.lang.String"/>
 	<field name="user" class="java.lang.String"/>
 	<field name="comment" class="java.lang.String"/>
-	<field name="time" class="java.lang.String"/>
+	<field name="time" class="java.util.Date"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -252,7 +252,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{time}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd MMM, hh:mm a").format($F{time})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement key="textField-8" x="162" y="0" width="102" height="15" isPrintWhenDetailOverflows="true"/>
